# DesktopApp

./: .gitignore  BUILD_NOTES.md  CMakeLists.txt  DLL_DEPLOYMENT.md  PROJECT_STATUS.md  README.md  README_CLEAN.md  WHY_DLLS_NOT_COPIED.md  deploy-all-dlls.ps1  deploy-deps.ps1  deploy-dlls.ps1  mailmap.txt  package-lock.json  resources.qrc  run-app.ps1  setup-build-env.ps1
docs/: ARCHITECTURE.md  ARCHITECTURE_NEW.md  INSTALLATION.md  PROJECT_STATUS.md  SECURITY.md  USER_GUIDE.md
scripts/: setup-dev.bat  setup-dev.sh  setup-shell-integration.bat  setup-shell-integration.sh
src/: main.cpp
src/core/: Application.cpp  Application.h  CrashHandler.cpp  CrashHandler.h
src/data/: ConversationStore.cpp  ConversationStore.h  JsonStore.cpp  JsonStore.h  Models.cpp  Models.h
src/providers/: AIProvider.cpp  AIProvider.h  EchoProvider.cpp  EchoProvider.h  ProviderManager.cpp  ProviderManager.h  ProviderSDK.cpp  ProviderSDK.h
src/services/: AudioRecorder.cpp  AudioRecorder.h  AuthenticationService.cpp  AuthenticationService.h  FileVault.cpp  FileVault.h  SearchEngine.cpp  SearchEngine.h  SettingsStore.cpp  SettingsStore.h
src/theme/: IconRegistry.cpp  IconRegistry.h  ThemeManager.cpp  ThemeManager.h
src/ui/: ConversationListWidget.cpp  ConversationListWidget.h  EnhancedMessageWidget.cpp  EnhancedMessageWidget.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  MessageComposer.cpp  MessageComposer.h  MessageThreadWidget.cpp  MessageThreadWidget.h  SettingsDialog.cpp  SettingsDialog.h  SimpleMarkdown.cpp  SimpleMarkdown.h  SimpleMessageWidget.cpp  SimpleMessageWidget.h
